<resources>
    <string name="app_name">PlaceBook</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="api_key">AIzaSyCW6VNjS_uIl3xku19ZXzBxZEjg0yo-x4s</string>
    <string name="bookmark_image">Bookmark image</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Phone number</string>
    <string name="notes">Notes</string>
    <string name="enter_notes">Enter notes</string>
    <string name="save">save</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="category">Category</string>
    <string name="share">share</string>
    <string name="todo">TODO</string>
</resources>