<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data >
        <variable
            name="DetailView"
            type="com.raywenderlich.placebook.viewmodel.DetailViewModel.DetailView" />
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:collapseColumns=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">
            
            <com.google.android.material.appbar.MaterialToolbar
                android:fitsSystemWindows="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim= "?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:navigationIcon="@drawable/travell"
                app:toolbarId="@+id/toolbar">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:fitsSystemWindows="true"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />
            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageViewPlace"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:fitsSystemWindows="true"
                    android:maxHeight="@dimen/image_view_max_height"
                    android:scaleType="fitCenter"
                    android:src="@drawable/girl"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewName"
                    style="@style/BookmarkLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:layout_marginTop="16dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/editTextName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewPlace" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewCategoryLabel"
                    style="@style/BookmarkLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/category"
                    app:layout_constraintBottom_toBottomOf="@+id/spinnerCategory"
                    app:layout_constraintEnd_toStartOf="@+id/barrier1"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/spinnerCategory"
                    app:layout_constraintVertical_bias="1.0" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewNotes"
                    style="@style/BookmarkLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:text="@string/notes"
                    app:layout_constraintBaseline_toBaselineOf="@+id/editTextNotes"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewCategoryLabel"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewPhone"
                    style="@style/BookmarkLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    app:layout_constraintBaseline_toBaselineOf="@+id/editTextPhone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewNotes"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewAddress"
                    style="@style/BookmarkLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    app:layout_constraintBaseline_toBaselineOf="@+id/editTextAddress"
                    app:layout_constraintEnd_toStartOf="@+id/barrier1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewPhone"/>

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="left"
                    app:constraint_referenced_ids="editTextName,editTextNotes,editTextPhone, editTextAddress,spinnerCategory" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextName"
                    android:text="@{DetailView.name}"
                    style="@style/BookmarkEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/barrier1"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewPlace"/>

                <ImageView
                    android:id="@+id/imageViewCategory"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/other"
                    android:layout_marginStart="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/spinnerCategory"
                    app:layout_constraintStart_toEndOf="@+id/barrier1"
                    app:layout_constraintTop_toTopOf="@+id/spinnerCategory"
                    />

                <Spinner
                    android:id="@+id/spinnerCategory"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight='1.4'
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageViewCategory"
                    app:layout_constraintTop_toBottomOf="@+id/editTextName"
                    />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextNotes"
                    style="@style/BookmarkEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:hint="@string/enter_notes"
                    android:text="@{DetailView.notes}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/barrier1"
                    app:layout_constraintTop_toBottomOf="@+id/spinnerCategory" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPhone"
                    android:text="@{DetailView.phone}"
                    style="@style/BookmarkEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/barrier1"
                    app:layout_constraintTop_toBottomOf="@+id/editTextNotes"/>
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextAddress"
                    android:text="@{DetailView.address}"
                    style="@style/BookmarkEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:inputType="textMultiLine"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/barrier1"
                    app:layout_constraintTop_toBottomOf="@+id/editTextPhone"/>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </layout>

    


 